# polymarket-paper-trader

./: CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  server.json
.claude/skills/polymarket-paper-trader/: SKILL.md
.github/workflows/: publish.yml  test.yml
pm_sim/: __main__.py  api.py  benchmark.py  orders.py
pm_trader/: card.py  cli.py  mcp_server.py
skill/pm-sim/: SKILL.md
skill/polymarket-paper-trader/: SKILL.md
tests/: test_benchmark.py  test_card.py  test_cli.py  test_e2e_live.py  test_engine.py  test_mcp_server.py  test_models.py  test_orders.py
