[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-paper-trader"
version = "0.1.4"
description = "Your AI agent trades Polymarket — $10k paper money, real prices, zero risk. Compete on the leaderboard."
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.30",
]

[tool.setuptools.packages.find]
include = ["pm_trader*"]

[tool.pytest.ini_options]
markers = ["live: tests requiring network access to Polymarket API"]

[project.scripts]
pm-trader = "pm_trader.cli:main"
pm-trader-mcp = "pm_trader.mcp_server:main"
